# pseudo-ecg

./: .gitignore  README.md  _config.yml  _toc.yml  pyproject.toml
.github/workflows/: build_docs.yml  main.yml
demos/: demo_slab.py
demos/biv/: README.md  create_geometries.py  demo_biv.py  demo_biv_bidomain.py  main.py
demos/slab/: create_geometries.py  demo_slab.py  demo_slab_augmented_monodomain.py  demo_slab_bidomain.py  demo_slab_monodomain.py  main.py
docs/: api.rst
src/pseudo_ecg/: __init__.py  ecg.py  eikonal.py  mesh_utils.py
tests/: test_ecg.py  test_eikonal.py  test_mesh_utils.py
